--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-toolkit": "^7.0.13",
     "react-scripts": "4.0.3",
     "sass": "^1.43.4",
     "uuid": "^8.3.2",
